--- a/Browser101/carrot/index.html
+++ b/Browser101/carrot/index.html
@@ -7,16 +7,17 @@
     <meta author = "gangpyo"> 
     
     <script src="https://kit.fontawesome.com/99b46b0b5a.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="style.css" />
     <title>carrotGame</title>
 </head>
 <body>
     <section class="body-container">
-        <button class="control-btn"><i class="fas fa-play"></i></button>
-        <div class="counter">00:00</div>
-        <div class="carrot-num">0</div>
-
-        <section class="game-field">
+        <section class="control section">
+            <button class="control__btn"><i class="fas fa-play"></i></button>
+            <div class="control__counter">00:00</div>
+            <div class="contorl__carrot-num">0</div>
+       </section>
+        <section class="game-field section">
             <img src="img/carrot.png" alt="carrot" class="carrot">
             <img src="img/bug.png" alt="bug" class="bug">
         </section>
