--- a/Browser101/carrot/index.html
+++ b/Browser101/carrot/index.html
@@ -8,18 +8,18 @@
     
     <script src="https://kit.fontawesome.com/99b46b0b5a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
+    <script src = 'main.js' defer></script>
     <title>carrotGame</title>
 </head>
 <body>
     <section class="body-container">
         <section class="control section">
-            <button class="control__btn"><i class="fas fa-play"></i></button>
-            <div class="control__counter">00:00</div>
-            <div class="contorl__carrot-num">0</div>
-       </section>
+                    <button class="control__btn"><i class="fas fa-play"></i></button>
+                    <span class="control__counter">00:00</span>
+                    <span class="control__score">0</span>
+        </section>
         <section class="game-field section">
-            <img src="img/carrot.png" alt="carrot" class="carrot">
-            <img src="img/bug.png" alt="bug" class="bug">
+            <div class="Pop-up">You Lose!  <i class="fas fa-reply Pop-up__btn"></i></div>
         </section>
         
     </section>
