--- a/javascript/functional-javascript/10. 비동기 동시성 프로그래밍 2/1/html/1-1.html
+++ b/javascript/functional-javascript/10. 비동기 동시성 프로그래밍 2/1/html/1-1.html
@@ -1,26 +1,32 @@
 <script src="../lib/fx.js"></script>
 
+
+## 비동기 상황에서 map,take 동작하려면?
 ## 지연 평가 + Promise - L.map, map, take
-
 <script>
-  /*  go(
-      [1, 2, 3],
-      L.map(a => Promise.resolve(a + 10)),
-      take(2), 
-      log);
-
+/* 
+      // Promise를 순회한다면?
     go(
       [Promise.resolve(1), Promise.resolve(2), Promise.resolve(3)],
       L.map(a => a + 10),
       take(2),
       log);
 
+      // L.map의 보조함수에 Promise를 넣어도 정상적으로 동작.
+   go(
+      [1, 2, 3],
+      L.map(a => Promise.resolve(a + 10)),
+      take(2), 
+      log);
+
+      //둘다 Promise
     go(
-      [Promise.resolve(1), Promise.resolve(2), Promise.resolve(3)],
+      [Promise.resolve(1), Promise.resolve(2), Promise.resolve(3)], 
       L.map(a => Promise.resolve(a + 10)),
       take(2),
       log);
-  
+
+      // map함수는 L.map 과 takeAll둘다포함하는 함수.
     go(
       [1, 2, 3],
       map(a => Promise.resolve(a + 10)),
@@ -37,9 +43,22 @@
       log);*/
 </script>
 
+## filter에서 비동기를 처리하려면 ?
 ## Kleisli Composition - L.filter, filter, nop, take
-
+## 함수에 전달되는과정에서 조건에 충족되지 않는 상황이 발생했을때, 다음인자로 건너 뛸 수 있게 해준다.
 <script>
+
+go([1, 2, 3, 4, 5, 6],
+    L.map(a => Promise.resolve(a * a)),
+        L.filter(a => { // 기존의 filter라면 Promise형태로 전달되어 빈배열을 만들다.
+          log(a);
+          return a%2;
+        })
+    // take(4),
+    /*log*/);
+
+
+
   go([1, 2, 3, 4, 5, 6],
     L.map(a => Promise.resolve(a * a)),
     // L.map(a => a * a),
@@ -68,6 +87,7 @@
 </script>
 
 <script>
+  // take를 사용함으로써 비동기에서 필요한 부분까지만 실행되는 장점.
   go([1, 2, 3, 4, 5, 6, 7, 8],
     L.map(a => {
       log(a);
@@ -81,6 +101,8 @@
     reduce(add),
     log);
 </script>
+
+
 
 
 
