--- a/javascript/functional-javascript/07. 지연성 1, 8. 지연성 2/1/html/1.html
+++ b/javascript/functional-javascript/07. 지연성 1, 8. 지연성 2/1/html/1.html
@@ -25,9 +25,9 @@
       log(reduce(add, list));
     </script>
 
-    ## 느긋한 L.range ## range와 무슨차이인가 -range는 실행했을떄
-    코드가평가되면서 값이 만들어짐. - L.range는 실행했을당시엔 평가가되지않고(
-    == 지연평가), 이후에 next()호출할경우에 평가되어 값이 만들어짐.
+    ## 느긋한 L.range ## range와 무슨차이인가 
+    - range는 실행했을떄 코드가평가되면서 값이 만들어짐.
+    - L.range는 실행했을당시엔 평가가되지않고(== 지연평가), 이후에 next()호출할경우에 평가되어 값이 만들어짐.
 
     <script>
       const L = {};
