--- a/javascript/functional-javascript/07. 지연성 1, 8. 지연성 2/2/html/2.html
+++ b/javascript/functional-javascript/07. 지연성 1, 8. 지연성 2/2/html/2.html
@@ -1,7 +1,9 @@
 <script src="../lib/fx.js"></script>
 
-# 이터러블 중심 프로그래밍에서의 지연 평가 (Lazy Evaluation) - 제때 계산법 -
-느긋한 계산법 - 제너레이터/이터레이터 프로토콜을 기반으로 구현 ### L.map
+# 이터러블 중심 프로그래밍에서의 지연 평가 (Lazy Evaluation).
+- 제때 계산법.
+- 느긋한 계산법.
+- 제너레이터/이터레이터 프로토콜을 기반으로 구현 ### L.map
 
 <script>
   L.map = function* (f, iter) {
@@ -145,11 +147,14 @@
   // console.timeEnd('L');
 </script>
 
-### map, filter 계열 함수들이 가지는 결합 법칙 - 사용하는 데이터가 무엇이든지 -
-사용하는 보조 함수가 순수 함수라면 무엇이든지 - 아래와 같이 결합한다면 둘 다
-결과가 같다. [[mapping, mapping], [filtering, filtering], [mapping, mapping]] =
-[[mapping, filtering, mapping], [mapping, filtering, mapping]] ## 결과를 만드는
-함수 reduce, take ### reduce
+### map, filter 계열 함수들이 가지는 결합 법칙
+- 사용하는 데이터가 무엇이든지 
+- 사용하는 보조 함수가 순수 함수라면 무엇이든지 
+- 아래와 같이 결합한다면 결과가 같다.
+[[mapping, mapping], [filtering, filtering], [mapping, mapping]] = [[mapping, filtering, mapping], [mapping, filtering, mapping]] 
+
+### 결과를 만드는 함수 reduce, take 
+
 
 <script>
   L.entries = function* (obj) {
