--- a/javascript/functional-javascript/07. 지연성 1, 8. 지연성 2/4/html/1.html
+++ b/javascript/functional-javascript/07. 지연성 1, 8. 지연성 2/4/html/1.html
@@ -68,9 +68,9 @@
   // [1, 2, 3, 4, 5];
 </script>
 
-## L.flatMap (map을 해주고, flatten을 해준다.) ## 용도 : 전달해주는 함수를통해
-값을 조작 할 수 있게해준다. (vs flatten 차이) ## 왜 사용 ? : map과
-flatten이비효율적으로 동작하기떄문.
+## L.flatMap (map을 해주고, flatten을 해준다.) 
+## 용도 : 전달해주는 함수를통해 값을 조작 할 수 있게해준다. (vs flatten 차이) 
+## 왜 사용 ? : map과 flatten이비효율적으로 동작하기떄문.
 
 <script>
   // log([[1, 2], [3, 4], [5, 6, 7]].flatMap(a => a));
