--- a/javascript/functional-javascript/07. 지연성 1, 8. 지연성 2/4/html/1.html
+++ b/javascript/functional-javascript/07. 지연성 1, 8. 지연성 2/4/html/1.html
@@ -162,12 +162,15 @@
   );
 </script>
 
-## 지연성 / 이터러블 중심 프로그래밍 실무적인 코드 ## 함수형 프로그래밍
-:조합되어있는 함수에 맞는 데이터를 구성하며 진행되는 프로그래밍. - 리스트
-프로그래밍 - 이터러블 프로그래밍 - 어플리케이티브 프로그래밍
-고차함수,보조함수,데이터를 적절히 조합의 프로그래밍 ex) flatMap, filter,map,take
-한다 라는식으로 사고하기. ## 객체지향 프로그래밍 : 데이터를 우선적으로 구성하고
-메서드(함수)를 만들어가는 프로그래밍.
+## 지연성 / 이터러블 중심 프로그래밍 실무적인 코드 
+
+## 함수형 프로그래밍
+- 조합되어있는 함수에 맞는 데이터를 구성하며 진행되는 프로그래밍. (함수 우선)
+== 리스트 프로그래밍(리습) - 이터러블 프로그래밍 - 어플리케이티브 프로그래밍
+- 고차함수,보조함수,데이터를 적절히 조합의 프로그래밍 ex) "flatMap => filter => map => take 한다" 라는 식으로 사고하는 프로그래밍.
+
+## 객체지향 프로그래밍
+- 데이터를 우선적으로 구성하고 메서드(함수)를 만들어가는 프로그래밍. (데이터 우선)
 
 <script>
   var users = [
