--- a/javascript/functional-javascript/09. 비동기 동시성 프로그래밍/1/html/1-1.html
+++ b/javascript/functional-javascript/09. 비동기 동시성 프로그래밍/1/html/1-1.html
@@ -1,7 +1,13 @@
 <script src="../lib/fx.js"></script>
 
-학습목표 1. 콜백 개념. 2. 콜백 vs 프로미스 차이점. 3. 함수형 프로그래밍과
-연관지었을때 프로미스가 어떻게 활용되는지. # Promise ## 일급
+학습목표 
+1. 콜백 개념.
+2. 콜백 vs 프로미스 차이점. 
+3. 함수형 프로그래밍과 연관지었을때 프로미스가 어떻게 활용되는지.
+
+# Promise 
+
+## 일급
 
 <script>
   function add10(a, callback) {
