--- a/javascript/functional-javascript/09. 비동기 동시성 프로그래밍/1/html/1-3.html
+++ b/javascript/functional-javascript/09. 비동기 동시성 프로그래밍/1/html/1-3.html
@@ -1,11 +1,14 @@
 <script src="../lib/fx.js"></script>
 
 ## promise.then의 중요한 규칙
-
+## 
 <script>
   Promise.resolve(Promise.resolve(1)).then(function (a) {
-    log(a);
+    log(a);  // Promise.resolve(1)가 아닌,1출력
   });
 
-  new Promise(resolve => resolve(new Promise(resolve => resolve(1)))).then(log);
+  new Promise(resolve => resolve(new Promise(resolve => resolve(1)))).then(log); // 1 출력
+  
+  
+  // Promise가 중첩된다하더라도 바로 접근이 가능하다.
 </script>
