--- a/javascript/functional-javascript/03.제너레이터와 이터레이터/1.html
+++ b/javascript/functional-javascript/03.제너레이터와 이터레이터/1.html
@@ -1,7 +1,10 @@
 <script>const log = console.log;</script>
 
 # 제너레이터/이터레이터
-- 제너레이터: 이터레이터이자 이터러블을 생성하는 함수
+- 제너레이터
+  - 이터레이터이자 이터러블을 생성하는 함수.
+  - 호출되어도 즉시 실행되지않고 iterator객체를 반환한다.
+  - 이후 iterator의 next()메서드를 호출하면 제너레이터 함수가 실행되어 yield문을 만날때까지 진행됨.
 
 <script>
   function* gen() { 
